# chakra

./: README.md  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.rst
scripts/: barebones_build.py
src/chakra/: __init__.py  __main__.py  backend.py  config.py  core.py  errors.py  main.py  platform.py  tempfile_patch.py
src/chakra/_utils/: __init__.py  rfc822.py
src/chakra/core/: __init__.py  command.py  environment.py  hook.py  platform.py
src/chakra/data/: pyversions.json
src/chakra/utils/: __init__.py  decorators.py  dirtree.py  ini.py  rfc822.py  tempfile_patch.py  tomllib_patch.py  version.py
tests/: make_directories.md  simulator.py  tempfile_patch.py  test_config.py  test_core.py  test_main.py  test_utils_decorators.py  test_utils_dirtree.py  test_utils_ini.py  test_utils_rfc82.py  test_utils_rfc822.py  test_utils_version.py  tests.py
tests/test_utils/: test_rfc822.py
