[project]
name = "chakra"
version = "0.1.0"
description = "Standardized workflow for Python projects."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
authors = [ { name = "Saniya Maheshwari", email = "saniya.mah@gmail.com" } ]

dependencies = ["tomli; python_version<'3.11'", "pyproject-metadata"]

scripts = { chakra = "chakra:__main__.cli" }

[build-system]
requires = []

[tool.chakra.dev-deps]
test = ["nose2[coverage_plugin]", "tomli-w"]
fixes = ["flake8", "isort"]

[tool.chakra.source]
packages = ["chakra"]
